--- a/explorer/default_settings.json
+++ b/explorer/default_settings.json
@@ -1,6 +1,6 @@
 {
     "public":{
-        "chainName": "",
+        "chainName": "Persistence Testnet",
         "chainId": "crust-2",
         "gtm": "",
         "slashingWindow": 10000,
@@ -12,8 +12,8 @@
         "bech32PrefixValPub": "commitvaloperpub",
         "bech32PrefixConsAddr": "commitvalcons",
         "bech32PrefixConsPub": "commitvalconspub",
-        "stakingDenom": "ucommit",
-        "mintingDenom": "ucommit",
+        "stakingDenom": "commit",
+        "mintingDenom": "commit",
         "stakingFraction": 1000000,
         "gasPrice": 0.02,
         "coingeckoId": ""
