--- a/explorer/default_settings.json
+++ b/explorer/default_settings.json
@@ -6,13 +6,13 @@
         "slashingWindow": 10000,
         "uptimeWindow": 250,
         "initialPageSize": 30,
-        "bech32PrefixAccAddr": "commit",
-        "bech32PrefixAccPub": "commitpub",
-        "bech32PrefixValAddr": "commitvaloper",
-        "bech32PrefixValPub": "commitvaloperpub",
-        "bech32PrefixConsAddr": "commitvalcons",
-        "bech32PrefixConsPub": "commitvalconspub",
-        "stakingDenom": "ucommit",
+        "bech32PrefixAccAddr": "persist",
+        "bech32PrefixAccPub": "persistpub",
+        "bech32PrefixValAddr": "persistvaloper",
+        "bech32PrefixValPub": "persistvaloperpub",
+        "bech32PrefixConsAddr": "persistvalcons",
+        "bech32PrefixConsPub": "persistvalconspub",
+        "stakingDenom": "upersist",
         "mintingDenom": "ucommit",
         "stakingFraction": 1000000,
         "gasPrice": 0.02,
