--- a/explorer/default_settings.json
+++ b/explorer/default_settings.json
@@ -12,8 +12,8 @@
         "bech32PrefixValPub": "persistvaloperpub",
         "bech32PrefixConsAddr": "persistvalcons",
         "bech32PrefixConsPub": "persistvalconspub",
-        "stakingDenom": "upersist",
-        "mintingDenom": "ucommit",
+        "stakingDenom": "uxprs",
+        "mintingDenom": "uxprs",
         "stakingFraction": 1000000,
         "gasPrice": 0.02,
         "coingeckoId": ""
