--- a/telegramBot/package.json
+++ b/telegramBot/package.json
@@ -10,6 +10,6 @@
     "type": "git",
     "url": "https://github.com/persistenceOne"
   },
-  "author": "github.com/avkr003",
+  "author": "https://github.com/avkr003",
   "license": "ISC"
 }
