Updating error handling

--- a/telegramBot/config.json
+++ b/telegramBot/config.json
@@ -1,5 +1,5 @@
 {
-  "botToken"  : "1081971576:AAGbJRugne8CIzWVG6zTTYNgpaE-EbDxcPc",
+  "botToken"  : "",
   "adminBotChatID": 0,
   "requestTimeout": 3,
   "node" : {
